@@ -7,6 +7,7 @@ industrial-fluid-buffer=Industrial fluid buffer
 lookout-tower=Lookout tower
 radar=Radar tower
 map-marker=Beacon
+small-lamp=Factory light
 
 [entity-description]
 wooden-chest=Contains 25 slots for storing large amounts of items.\n[font=default-semibold][color=#ffe6c0]Requires manual interaction.[/color][/font]
