@@ -97,6 +97,7 @@ mam-power-slugs-slug-scanning=Slug scanning
 mam-quartz-quartz=Quartz
 mam-quartz-silica=__ITEM__silica__
 mam-quartz-quartz-crystals=__ITEM__quartz-crystal__
+mam-quartz-factory-lighting=Factory lighting
 mam-quartz-crystal-oscillator=__ITEM__crystal-oscillator__
 mam-quartz-signal-technologies=Signal technologies
 mam-quartz-explorer=Explorer
@@ -192,6 +193,7 @@ mam-power-slugs-slug-scanning=[font=default-semibold][color=#ffe6c0]Unlocks Scan
 mam-quartz-quartz=[font=default-semibold][color=#ffe6c0]Unlocks Scanner:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font][img=item.raw-quartz] [color=#2cd23f]__ITEM__raw-quartz__[/color]
 mam-quartz-silica=[font=default-semibold][color=#ffe6c0]Unlocks Recipes:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font][img=item.silica] [color=#2cd23f]__ITEM__silica__[/color]
 mam-quartz-quartz-crystals=[font=default-semibold][color=#ffe6c0]Unlocks Recipes:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font][img=item.quartz-crystal] [color=#2cd23f]__ITEM__quartz-crystal__[/color]
+mam-quartz-factory-lighting=[font=default-semibold][color=#ffe6c0]Unlocks Buildings:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font][img=item.small-lamp] [color=#2cd23f]Factory light[/color]
 mam-quartz-crystal-oscillator=[font=default-semibold][color=#ffe6c0]Unlocks Recipes:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font][img=item.crystal-oscillator] [color=#2cd23f]__ITEM__crystal-oscillator__[/color]
 mam-quartz-explorer=[font=default-semibold][color=#ffe6c0]Unlocks Buildings:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font][img=item.explorer] [color=#2cd23f]Explorer[/color]
 mam-quartz-frequency-mapping=[font=default-semibold][color=#ffe6c0]Unlocks Upgrades:[/color][/font]\n[font=default-semibold][color=#ffe6c0]   •  [/color][/font]Map
@@ -394,6 +396,7 @@ mam-power-slugs-slug-scanning=__ITEM__mam-power-slugs-slug-scanning__
 mam-quartz-quartz=__ITEM__mam-quartz-quartz__
 mam-quartz-silica=__ITEM__mam-quartz-silica__
 mam-quartz-quartz-crystals=__ITEM__mam-quartz-quartz-crystals__
+mam-quartz-factory-lighting=__ITEM__mam-quartz-factory-lighting__
 mam-quartz-crystal-oscillator=__ITEM__mam-quartz-crystal-oscillator__
 mam-quartz-signal-technologies=__ITEM__mam-quartz-signal-technologies__
 mam-quartz-explorer=__ITEM__mam-quartz-explorer__
