@@ -3,6 +3,7 @@ require("prototypes.organisation.storage-container")
 require("prototypes.organisation.industrial-storage-container")
 require("prototypes.organisation.fluid-buffer")
 require("prototypes.organisation.industrial-fluid-buffer")
+require("prototypes.organisation.factory-light")
 require("prototypes.organisation.lookout-tower")
 require("prototypes.organisation.radar-tower")
 require("prototypes.organisation.map-marker")
