@@ -44,7 +44,7 @@ local to_hide = {
 	"substation",
 	"train-stop", "artillery-wagon", "car", "tank", "spidertron", "spidertron-remote",
 	"logistic-robot", "construction-robot", "logistic-chest-active-provider", "logistic-chest-passive-provider", "logistic-chest-storage", "logistic-chest-buffer", "logistic-chest-requester", "roboport",
-	"small-lamp", "red-wire", "green-wire", "arithmetic-combinator", "decider-combinator", "constant-combinator", "programmable-speaker",
+	"red-wire", "green-wire", "arithmetic-combinator", "decider-combinator", "constant-combinator", "programmable-speaker",
 	"stone-brick", "hazard-concrete", "refined-concrete", "refined-hazard-concrete", "landfill", "cliff-explosives",
 	"repair-pack",
 	"boiler", "steam-engine", "solar-panel", "nuclear-reactor", "heat-pipe", "heat-exchanger", "steam-turbine",
